--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "next": "13.4.13",
     "next-auth": "^4.23.2",
     "next-nprogress-bar": "^2.1.2",
+    "node-forge": "^1.3.1",
     "notistack": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -132,6 +133,7 @@
     "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "20.4.10",
+    "@types/node-forge": "^1.3.11",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "@types/react-slick": "^0.23.10",
